fix(Dropdown): change chevron color and alignment

--- a/react/Dropdown/Dropdown.less
+++ b/react/Dropdown/Dropdown.less
@@ -56,21 +56,15 @@
 .chevron {
   position: absolute;
   right: 0;
-  top: @grid-row-height * 3;
   overflow: hidden;
-  color: @sk-mid-gray;
   height: (@interaction-type-row-span * @grid-row-height);
   border: 0;
   padding: 0 @field-gutter-width;
   background-color: transparent;
-  color: @sk-mid-gray;
   display: flex;
   align-items: center;
   pointer-events: none;
-
-  &:first-child {
-    top: 0;
-  }
+  color: @sk-black;
 }
 
 .chevronSvg {
